--- a/theme/templates/partials/navbar.html
+++ b/theme/templates/partials/navbar.html
@@ -7,7 +7,7 @@
     </a>
     {% if request.user.is_authenticated %}
         <div class="flex space-x-72">
-            <a href="#" class="flex items-center gap-3 bg-blue-450 p-2 rounded-lg transition duration-300 hover:bg-blue-550 hover:shadow-md text-sm">
+            <a href="{% url 'createPagaduria' %}" class="flex items-center gap-3 bg-blue-450 p-2 rounded-lg transition duration-300 hover:bg-blue-550 hover:shadow-md text-sm">
                 <span class="w-6 h-6 bg-white rounded-full flex items-center justify-center text-blue-450">➕</span>
                 <span>Nueva Pagaduría</span>
             </a>
