--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -4,12 +4,8 @@
 {% block title %}Iniciar Sesión{% endblock title %}
 
 {% block content %}
-<!-- Fondo oscuro traslúcido sin afectar el navbar -->
-<div class="fixed inset-0 bg-gray-900 bg-opacity-50 backdrop-blur-sm z-10"></div>
-
-<!-- Formulario centrado -->
-<div class="fixed inset-0 flex items-center justify-center p-4 font-sans z-20">
-  <div class="bg-white bg-opacity-90 rounded-lg shadow-lg w-full max-w-xs">
+<div class="fixed inset-0 bg-gray-900 bg-opacity-50 backdrop-blur-sm flex items-center justify-center p-4">
+  <div class="bg-white rounded-lg shadow-lg w-full max-w-xs">
     <div class="p-6">
       <h1 class="text-2xl font-semibold text-blue-450 text-center mb-4">Inicio de Sesión</h1>
 
