--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -3,8 +3,16 @@
 @tailwind utilities;
 
 @layer components {
+    label {
+        @apply absolute text-base font-semibold text-gray-700 -top-3 left-2 px-4 bg-white transition-all duration-150;
+    }
+
     .input-field {
-        @apply w-full p-2 border border-gray-300 rounded-xl focus:ring-2 focus:ring-blue-500 focus:outline-none;
+        @apply w-full p-2 border border-gray-300 rounded-xl focus:ring-1 focus:shadow-xl focus:ring-blue-500 focus:outline-none;
+    }
+    
+    .peer:focus + label {
+        @apply -top-8 left-0 px-1 py-0 text-lg text-gray-800 transition-all duration-150;
     }
 
     .next-btn, .prev-btn, .submit-btn {
