Cambios crearPagaduria.html

--- a/citas/templates/programar_citas.html
+++ b/citas/templates/programar_citas.html
@@ -6,7 +6,7 @@
 <br>
 <br>
 <br>
-<div class="flex justify-center items-center bg-no-repeat bg-center" style="background: url('{% static "img/logoColorSmall.png" %}') no-repeat center; background-size: 40%;">
+<div class="flex justify-center items-center  bg-cover bg-center bg-no-repeat">
     <div class="bg-white w-fit max-w-md rounded-lg shadow-md p-6 font-sans bg-opacity-90">
         <h2 class="text-2xl font-semibold text-center text-blue-450 mb-4">Programar Citas</h2>
 
