Update pagadurias model

--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -47,10 +47,10 @@
         </button>
       </form>
 
-      <p class="text-center text-xs text-gray-600 mt-3">
+      {% comment %} <p class="text-center text-xs text-gray-600 mt-3">
         ¿Nuevo usuario? 
         <a href="#" class="text-blue-450">Crear cuenta</a>
-      </p>
+      </p> {% endcomment %}
     </div>
   </div>
 </div>
